--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URL=mongodb://localhost:27017/
-JWT_SECRET=secret_key
+MONGO_URL=mongodb://localhost:27017/clinicSystemDB
+JWT_SECRET=yourStrongSecretKey123
